se agrego un lorem

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>a Whale of a greeting</title>
 </head>
+
 <body>
     <h1>hello, world</h1>
     <p>Call me Ishmael</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe facilis ducimus laborum neque eius sint ad
+        necessitatibus quia accusamus veniam facere nobis, placeat vero nesciunt repellat explicabo! Aspernatur,
+        reiciendis quia.</p>
 </body>
+
 </html>
