Add an image, and deleted 'lorem'

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <h1>hello, world</h1>
     <p>Call me Ishmael</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe facilis ducimus laborum neque eius sint ad
-        necessitatibus quia accusamus veniam facere nobis, placeat vero nesciunt repellat explicabo! Aspernatur,
-        reiciendis quia.</p>
+    <img src="images/breaching_whale.jpg">
+    
 </body>
 
 </html>
