--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <body>
     <h1>hello, world</h1>
+    <a href="about.html">about this project</a>
     <p>Call me Ishmael</p>
     <img src="images/breaching_whale.jpg">
+    
     
 </body>
 
