--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>About</h1>
-    <P>This iste is a sample project for the <strong>awesome</strong> Git Totorial <em>Learnenough™ git to Be Dangerous
-        </em>. </P>
+    <P>This iste is a sample project for the <strong>awesome</strong> Git Totorial <em><a href="https://www.learnenough.com/git-tutorial">Learnenough™  git to Be Dangerous
+        </em></a>. </P>
 </body>
 </html>
