--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>hello, world</h1>
     <a href="about.html">about this project</a>
     <p>Call me Ishmael</p>
-    <img src="images/breaching_whale.jpg">
+    <a href="htttps://www.flickr.com/photos/28883788@n04/10097824543">
+    <img src="images/breaching_whale.jpg"></a>
     </body>
 </html>
