--- a/about.html
+++ b/about.html
@@ -11,5 +11,6 @@
     <h1>About</h1>
     <P>This iste is a sample project for the <strong>awesome</strong> Git Totorial <em><a href="https://www.learnenough.com/git-tutorial">Learnenough™  git to Be Dangerous
         </em></a>. </P>
-</body>
+        <img src="images/polar_bear.jpg" alt="Polar bear">
+    </body>
 </html>
