--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>hello, world</h1>
+    <h1>About Us</h1>
     <a href="about.html">about this project</a>
     <p>Call me Ishmael</p>
     <a href="htttps://www.flickr.com/photos/28883788@n04/10097824543">
