add a tags page

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         You should follow Nick on Twitter
         <a href="https://twitter.com/nickmerwin">here</a>.
     </p>
+    <p>
+        <nav><a href="../website/tags.html">pages Tags Example</a></nav>
+    </p>
 </body>
 
 </html>
