adding index link

--- a/tags.html
+++ b/tags.html
@@ -74,6 +74,8 @@
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
        </tr>
         </table>
+        <a href="../website/index.html" target="_blank" rel="noopener">Index</a>
+        <a href="../website/moby_dick.html" target="_blank" rel="noopener noreferrer">moby dick page</a>
 
 </body>
 
