I need to fix the Tag page

--- a/moby_dick.html
+++ b/moby_dick.html
@@ -27,7 +27,7 @@
         <img src="images/sperm_whales.jpg"></a>
     <div>
         <h3>Moby-Dick: A classic tale og the sea</h3>
-        <a href="http://www.softcover.io/read/6070fb03/moby-dick" target="_blank " rel="noopener">\
+        <a href="http://www.softcover.io/read/6070fb03/moby-dick" target="_blank " rel="noopener">
             <img src="images/moby_dick.png" alt="Moby Dick">
         </a>
         <p><a href="http://softvoer.io/read/6070fb03/moby-dick" target="_blank" rel="noopener"><em>Moby-Dick</em></a>
@@ -41,11 +41,15 @@
             </p>
         </blockquote>
         <p>
-            After driving off hos splee (which <em>can't</em> be good for you), Ishmael then goes on in much the same
+            After driving off his splee (which <em>can't</em> be good for you), Ishmael then goes on in much the same
             vein for approximately one jillion pages. The only thing bigger then Moby Dick (who&mdash;<em>spoiler
                 alert!</em>&mdash;is a giant white whale) is the book itself
         </p>
     </div>
+    <p>
+        <a href="../website/index.html" target="_blank" rel="noopener">Index</a>
+
+    </p>
 </body>
 
 </html>
