--- a/tags.html
+++ b/tags.html
@@ -17,6 +17,8 @@
     </p>
 
     <p>Thetables below don't include all HTML tags , but they do list many of the most importan ones</p>
+ <div>
+    <SPAN>
     <h2> Block Elements</h2>
     <table>
         <tr>
@@ -42,6 +44,10 @@
             <td>tabe data</td>
             <td>include a table data cell</td>
         </tr>
+    </SPAN>
+    </div>
+    <div>
+        <span>
         <h2>Inline Elements</h2>
         <table>
             <tr>
@@ -74,6 +80,8 @@
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
        </tr>
         </table>
+    </span>
+    </div>
         <a href="../website/index.html" target="_blank" rel="noopener">Index</a>
         <a href="../website/moby_dick.html" target="_blank" rel="noopener noreferrer">moby dick page</a>
 
